# object-oriented-programming_8

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: Task1.py  Task2.py  Task3.py  Task4.py  Task5.py
